<resources>
    <string name="app_name" translatable="false">Exercício 4</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="label_title">Title:</string>
    <string name="label_book_cover">Book cover</string>
    <string name="label_book_cover_url">Book Cover URL:</string>
    <string name="label_author">Author:</string>
    <string name="label_publish_year">Publish Year:</string>
    <string name="label_description">Description:</string>
    <string name="hint_book_title">Inform the book title</string>
    <string name="hint_book_cover_url">Inform the book cover url</string>
    <string name="hint_book_author">Inform the book author</string>
    <string name="hint_publish_year">Inform the publish year</string>
    <string name="hint_book_descriptions">Inform the book descriptions</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_edit">Edit</string>
    <string name="label_back">Back</string>
    <string name="label_load">Load</string>
    <string name="label_wait">Wait</string>
    <string name="msg_book_title_required">Book title is required!</string>
    <string name="msg_book_cover_required">Book cover is required!</string>
    <string name="msg_book_cover_must_be_loaded">The book cover must be loaded!</string>
    <string name="msg_loading_image">Loading image\.\.\.</string>
    <string name="msg_author_required">Book author is required!</string>
    <string name="msg_publish_year_required">Publish year is required!</string>
    <string name="msg_book_description_required">Book description is required!</string>
    <string name="msg_question_delete_book">Do you really want to delete this book?</string>
    <string name="content_load_photo">Loads the user photo image</string>
    <string name="content_user_photo">User photo</string>
    <string name="label_user_name">User Name:</string>
    <string name="hint_user_name">Informe your name</string>
    <string name="label_email_address">Email Address:</string>
    <string name="hint_email_address">Inform your email address</string>
    <string name="label_photo_url">Photo URL:</string>
    <string name="hint_photo_url">Inform the path to your photo</string>
    <string name="msg_user_photo_required">User photo is required!</string>
    <string name="msg_email_address_required">Email address is required</string>
    <string name="msg_user_name_required">User name is required!</string>
    <string name="msg_user_photo_must_be_loaded">The user photo must be loaded!</string>
    <string name="mnu_log_off">Log off</string>
</resources>
