<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activity.EditActivity">

    <ImageView
            android:layout_width="96dp"
            android:layout_height="110dp" app:srcCompat="@drawable/ic_menu_camera"
            android:id="@+id/ivBookCover" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:contentDescription="@string/label_book_cover"/>
    <TextView
            android:text="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            app:layout_constraintStart_toEndOf="@+id/ivBookCover"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etTitle"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etTitle"
            app:layout_constraintStart_toEndOf="@+id/ivBookCover" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_book_title"
            tools:ignore="Autofill"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView5"/>
    <TextView
            android:text="@string/label_book_cover_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivBookCover"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etBookCover"
            android:hint="@string/hint_book_cover_url"
            tools:ignore="Autofill"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btLoadPhoto" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/label_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btLoadPhoto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/label_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etBookCover"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etAuthor"
            android:hint="@string/hint_book_author"
            tools:ignore="Autofill"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/label_publish_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etAuthor"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etPublishYear"
            android:hint="@string/hint_publish_year" tools:ignore="Autofill"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/label_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPublishYear"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etDescription"
            android:hint="@string/hint_book_descriptions"
            tools:ignore="Autofill"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/linearLayout"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/label_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btSave" android:layout_weight="1"
                tools:ignore="ButtonStyle"/>
        <Button
                android:text="@string/label_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btCancel" android:layout_weight="1"
                tools:ignore="ButtonStyle"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvId" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>